--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@syncfusion/ej2-angular-notifications": "^20.4.48",
+    "json-server": "^0.17.2",
+    "ng-zorro-antd": "^15.0.3",
+    "ngx-toastr": "^16.1.0",
     "rxjs": "~7.8.0",
+    "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
